<resources>
    <string name="app_name">xiaomiguide</string>
    <string name="mi_title"><Data><![CDATA[ MIUI<font color="#007dff">%1$s</font>]]></Data></string>
    <string name="language_zh">中文(简体)</string>
    <string name="language_zh_ft">中文(繁體)</string>
    <string name="language_en">English</string>
    <string name="back">返回</string>
    <string name="go_on">继续</string>
    <string name="jump">跳过</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="connect_wlan">连接互联网</string>
    <string name="wifi_rssi_level_perfect">强</string>
    <string name="wifi_rssi_level_good">较强</string>
    <string name="wifi_rssi_level_normal">一般</string>
    <string name="wifi_rssi_level_bad">弱</string>
    <string name="wifi_rssi_level_nothing">无</string>
    <string name="wifi_wpa">WPA PSK</string>
    <string name="wifi_wep">WEP PSK</string>
    <string name="wifi_wpa2">WPA2 PSK</string>
    <string name="wifi_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_wpa2_use_wps">WPA2 PSK WPS</string>
    <string name="wifi_802">802.1x EAP</string>
    <string name="wifi_none">NONE </string>
    <string name="connected">已连接</string>
    <string name="identity_erroe">验证身份出现问题</string>
    <string name="scaning">正在扫描...</string>
    <string name="saved">已保存</string>
    <string name="cancel_wifi">取消</string>
    <string name="connect_wifi">连接</string>
    <string name="save">保存</string>
    <string name="identity">身份</string>
    <string name="wifi_passwd">密码</string>
    <string name="auto_connect">自动连接</string>
    <string name="phone_hot_spots">手机热点</string>
    <string name="state_tips">状态信息</string>
    <string name="connect_speed">连接速度</string>
    <string name="signal_strength">信号强度</string>
    <string name="safe">安全性</string>
    <string name="subnet_mask">子网掩码</string>
    <string name="ip_set">IP 设置</string>
    <string name="dhcp_tips">DHCP</string>
    <string name="static_tips">静态</string>
    <string name="ip_address">ip地址</string>
    <string name="router">路由器</string>
    <string name="prefix">前缀长度</string>
    <string name="dns1">DNS1</string>
    <string name="dns2">DNS2</string>
    <string name="not_change">&#160;(未更改)</string>
    <string name="remove_wlan">删除网络</string>
    <string name="delete_wlan_tips">会停止自动连接此网络，并且再次连接时可能需要重新输入密码</string>
    <string name="delete_wlan">删除网络</string>
    <string name="modify_wlan">修改网络</string>
    <string name="user_privacy_01">《用户协议》 （以下简称“本协议”） 是您 （或称 "用户"， 指注册、登 录、 使用、 浏览本服务的个人或组织） 与小米公司及其关联公司 (以下简称 "小米 "） 及其运营合作单位 （以下简称" 合作单位"） 之 间关于小米网站 （v_.mi.com, 简称本网站彡 与小米产品、 程序 及服务 （包括但不限于米聊与 MIUI) 所订立的协议。\n
小米在此特别提醒用户认真阅读、 充分理解一本协议中各条款，包 括免除或者限制小米责任的免责条款及对用户的权利限制条款。 请您审慎阅读并选择接受或不接受本协议 (未成年人应在法定监 护人陪同下阅读）。 除非您接受本协议所有条款， 否则您无权注 册、 登录或使用本协议所涉相关服务。 您的注册、 登录、 使用等行 为将视为对本协议的接受， 并同意接受本协议各项条款的约束。\n
您对本协议的接受即自 愿接受全部条款的约束， 包括接受小米公 司对任一服务条款随时所做的任何修改。本协议可由小米随时更 新， 更新后的协议条款一旦公布即代替原来的协议条款， 恕不再 另行通知， 用户可在本网站查阅最新版协议条款。 在小米修改本 协议相关条款之后， 如果用户不接受修改后的条款， 请立即停止 使用小米提供的服务， 用户继续使用小米提供的服务将被视为已 接受了修改后的协议。\n</string>
    <string name="user_privacy_02">1. 用户使用规则\n</string>
    <string name="user_privacy_03">1) 您无需用户账户即可浏览本网站。 但某些网站功能、 小米产品、 程序和服务需要您注册小米帐户。 如果您想使用本网站与小米产 品、 程序和服务的更多功能， 您必须注册相应帐户并且于注册页 面上提供相关的个人信息。您可以按照网站说明随时终止使用您 的账户， 本网站将会依据本协议规定保留或终止您的账户。 您必 须承诺和保证：\n
•	您了解井同意， 本网站是一个 【应用服务产品】， 用户须对注 册信息的真实性、 合法性、 有效性承担全部责任； 用户不得冒 充他人， 不得利用他人的名义发布任何信息； 不得恶意使用注 册帐户导致其他用户误认； 否则我们有权立即停止提供服务， 您独自承担由此而产生的一切法律责任。\n
•	您使用本网站与小米产品、 程序及服务的行为必须合法， 您必 须为自 己注册帐户 下的一切行为负责， 包括您所发表的任何内 容以及由此产生的任何结果。用户应对其中的内容自行加以判 断， 并承担因使用内容而引起的所有风险， 包括因对内容的正 确性、 完整性或实用性的依赖而产生的风险。 小米公司无法且 不会对因用户行为而导致的任何损失或损害承担责任。\n
•	您对您的登录信息保密、 不被其他人获取并使用并且对您在本 网站账户下的所有行为负责。您必须将任何有可能触犯法律 的， 未授权使用或怀疑为未授权使用的行为在第一时间通知本 网站， 本网站不对您因未能遵守上述要求而造成的损失承担责任。\n
•   您通过本网站发表的信息为公开的信息， 其他第三方均可以通 过本平台获取用户发表的信息， 用户对任何信息的发表即认可 该信息为公开的信息， 井单独对此行为承担法律责任； 任何用 户不愿被其他第三人获知的信息都不应在该平台上进行发表。\n
2) 您必须知悉并确认：\n
•	我们因业务发展需要， 单方面对本服务的全部或部分服务内容 在任何时候不经任何通知的情况下变更、 暂停、 限制、 终止或 撤销我们服务的权利， 用户需承担此风险。\n
•	我们提供的服务中可能包括广告等活动， 用户同意在使用过程 中显示我们及关联方与第三方供应商、合作伙伴提供的广告以 及其他活动。\n
•	我们有权自行全权决定以任何理由， 对违反有关法律法规或本 协议约定； 或侵犯、 妨害、 威胁任何人权利或安全的内容，或 者假冒他人的行为， 有权依法停止传输任何相关内容， 井有权 依其自行判断对违反本协议的任何人士采取适当的法律行动， 包括但不限于， 从服务中删除具有违法性、 侵权性、 不当性等 内容， 终止违反者的成员资格， 阻止其使用我们全部或部分服 务， 并且依据法律法规保存有关信息并向有关部门报告等。\n
•	我们的某些产品服务必须在联网的情况下才可以使用， 包括但 不限于： 应用超市、 主题市场等。 您必须自行负担个人上网或第三方（包括但不限于电信或移动通讯提供商）收取的通讯费、信息费等相关费用。如涉及电信增值服务，我们建议您与增值服务提供商确认相关费用。\n
•	推荐好友安装使用米聊之后， 米聊将通过您的允许分析您的手 机通讯录， 来帮助您寻找您已经在使用米聊的朋友。 米聊采用 通过高强度、 不可逆的加密算法 （将收集号码加密成为一系列 不可解密的字符串） 来加密您的电话号码， 并检索您的电话本 上的电话号码在加密后的字符串是否和米聊中已有用户的电 话号码单向加密后的字符串一致。 如果一致， 则对方可能是您 认识的朋友。 其他的用户也能通过他们的手机通讯录来寻找和 联系您。\n
•	您使用本网站购物， 为确保您的购物安全，姓名、地址、电话 只能修改其中一项信息， 如需帮助， 请使用订单中的手机号码 拨打客服电话； 非本机来电修改信息以与订单中手机号码核实 为准。\n
•	隐私政策。 在任何时候， 您的信息均依照小米公司的隐私政策 处理， 该政策通过提述而納入本许可证内， 并可在 hUp://www. miui.com/res 付 oc/pr 丨 vacy/cn.html 浏览。\n</string>
    <string name="user_privacy_04">2.用户内容\n</string>
    <string name="user_privacy_05">1)	用户内容是指该用户下载、 发布或以其他方式使用本网站与小 米产品、 程序及服务时产生的所有内容 （例如： 您的信息、 图片、 音乐或其他内容）； 您是您的用户内容唯一的责任人， 您将承担因 您的用户内容披露而导致的您或任何第三方被识别的风险。\n
2) 您通过上传、 发行或其他方式使用您在本网站与小米产品、程 序及服务的用户内容时， 即视为自动授权且承诺和保证您有权授 权给我们不可撤销的、 非独家的、 免版税的且足额缴纳的全球许 可， 用以：\n
•	仅为 向您提供本网站与小米产品和程序服务或改进本网站与 小米产品、 程序及服务之目的， 复制、 发行、 公开展示和表演、 制作衍生作品、 将其纳入其他作品或以其他方式使用您的用户 账户 （排除您的个人信息）； 并授予上述事项的转让许可；\n
•	仅为向目标接收者提供个人信息之目的， 复制、 发行您的用户 内容中的私人信息；\n
•	您同意不可撤销的、 放弃的 （并会导致被放弃） 关于您用户内 容的道德权利和归属的声明。\n</string>
    <string name="user_privacy_06">3.用户权利及义务\n</string>
    <string name="user_privacy_07">1)	合法使用本网站的权利；\n
2)	在您所有的移动通信设备上下载、 安装、 使用小米产品、 程序及 服务的权利；\n
3)	小米帐号的所有权归小米及其关联公司所有， 基于帐号安全性 的考虑， 禁止使用他人的手机号、 邮箱地址注册小米帐号。 您完成 申请注册手续后， 获得小米帐号的使用权， 该使用权仅属于初始 申请注册人， 禁止赠与、 借用、 租用、 转让或售卖。 小米因经营需 要， 有权回收用户的账号；\n
4)	您有权更改、 删除在本网站上的个人资料、 注册信息及发布内容等， 但需注意， 删除有关信息的同时也会删除任何您储存在系统中的文字和图片。 用户需承担该风险；\n
5)	您有责任妥善保管注册帐户信息及帐户密码的安全 ，您需要对注册帐户 以及密码下的行为承担法律责任。 用户同 意在任何情况下不使用其他成员的帐户或密码。在您怀疑他人在使用您的帐户或密码时， 您同意立即通知小米。\n
6)	权利 限制：\n
•	您不得对本网站内容或小米产品、 程序及服务 （包括但不限于 内容或产品中的广告或赞助内容） 进行任何形式的许可、出 售、 租赁、 转让、 发行或做其他商业用途；\n
•	您不得以创建相同或竞争服务为目 的访问本网站或使用小米 产品、 程序及服务；\n
•	除非法律明文规定， 否则您不得对本网站或小米产品、 程序及 服务 （包括但不限于内容或产品中的广告或赞助内容） 的任何 部分以任何形式或方法进行复制、 发行、 再版 、下载 、显示 、张 贴、 修改、 翻译、合并、利用、分解或反向编译等；\n
•   您已同意通过上传、发布或以其他方式使用本网站或小米产品、程序和服务，在使用过程中，你将承担因下述行为所造成的风险而产生的全部法律责任；破坏宪法所确定的基本原则的；\n
•	危害国家安全、泄露国家秘密、颠覆国家政权、 破坏国家统一 的; 损害国家荣誉和利益的； 煽动民族仇恨、 民族歧视， 破坏民 族团结的； 破坏国家宗教政策， 宣扬邪教和封建迷信的；\n
•	散布谣言， 扰乱社会秩序， 破坏社会稳定的； 散布淫秽、 色情、 赌博、暴力 、凶杀、 恐怖或者教唆犯罪的； 侮辱或者诽谤他人， 侵害他人合法权益的； 含有法律法规、 行政规章所禁止的其他 内容的。\n
•	您已同意不在本网站或利用小米产品、 程序及服务从事下列行 为： 上传或发布电脑病毒、 蠕虫、 恶意代码、 故意破坏或改变 计算机系统或数据的软件； 未授权的情况下， 收集其他用户的 信息或数据， 例如电子邮箱地址等；\n
•	禁用本网站的网络连接， 给本网站造成过度的负担或以其他方 式干扰或损害网站服务器和网络链接； 在未授权的情况下，尝 试访问本网站、 米聊、 服务器或本网站的网络链接；\n
•	干扰、 破坏其它用户正常使用本网站或小米产品、 程序及服 务。\n</string>
    <string name="user_privacy_08">4.第三方\n</string>
    <string name="user_privacy_09">1) 您已知晓或同意我们的服务是基于第三方如安卓系统等的技术 支持获得。 您已知晓本协议是在您与小米之间签订， 而非您与上 述第三方之间签订。 小米是基于本网站和小米产品、 程序及服务 所产生的内容、 维护、 支持服务、 保证和由此产生的诉讼等事项的 唯一责任人。 您已同意遵守且授权给本网站和小米产品、 程序及 服务限制您有条件的使用本网站和米聊服务。\n
2)	用户内容是指该用户下载、 发布或以其他方式使用本网站与小 米产品、 程序及服务时产生的所有内容 （例如： 您的信息、 图片、 音乐或其他内容）； 您是您的用户内容唯一的责任人， 您将承担因 您的用户内容披露而导致的您或任何第三方被识别的风险。\n
3)	您需对您使用第三方网站和广告产生的风险承担法律责任。当 您访问第三方网站和广告时， 适用第三方的条款和政策。\n
4)	本网站和小米产品 、程序及服务包含其他用户提供的用户内 容。 您与其他用户的互动仅属于您与其他用户之间的行为， 小米 不控制且不对以上用户内容承担法律责任， 也没有检查、 监控、审 批、 核准以上用户 内容的义务。 您对因使用该用户 内容以及与其 他用户互动产生的风险承担法律责任。 本网站和小米产品、 程序 及服务对此类行为不承担任何法律责任。\n</string>
    <string name="user_privacy_10">5.损害赔偿\n</string>
    <string name="user_privacy_11">1) 您已同意无害的使用本网站和小米产品、 程序及服务， 避免小 米因下述行为或相关行为遭受来自第三方的任何投诉、 诉讼、损 失 、损害 、责任、 成本和费用 （包括但不限于律师费）： 您使用本 网站和小米产品、 程序及服务的行为； 您的用户 内容； 您违反本协 议的行为。\n
2)	用户 内容是指该用户下载、 发布或以其他方式使用本网站与小 米产品、 程序及服务时产生的所有内容 （例如： 您的信息、 图片、 音乐或其他内容）； 您是您的用户内容唯一的责任人， 您将承担因 您的用户内容披露而导致的您或任何第三方被识别的风险。\n
3)	您已同意， 除非获得小米书面同意， 您不得在您与小米共同对 第三方提起的诉讼中单方和解。\n
4)	小米将尽合理努力将此类诉讼、诉讼行为或进程通知您。\n
5)	在任何情况下， 小米都不对您或任何第三方因本协议产生的任 何间接性、 后果性、 惩戒性的、 偶然的、 特殊或惩罚性的损害赔偿 承担责任。 访问、 使用本网站和小米产品、 程序及服务所产生的损 坏计算机系统或移动通讯设备数据库的风险将由您个人承担。\n</string>
    <string name="user_privacy_12">6.免责声明\n</string>
    <string name="user_privacy_13">1) 如发生下述情形， 小米不承担任何法律责任： 第三方被识别的\n
•   依据法律规定或相关政府部门的要求提供您的个人信息；\n
•	由于您的使用不当或其他自身原因而导致任何个人信息的泄\n
•	任何由于黑客攻击， 电脑病毒的侵入， 非法内容信息、 骚扰信 息的屏蔽， 政府管制以及其他任何网络、 技术、 通信线路 、信 息安全管理措施等原因造成的服务中断、 受阻等不能满足用户 要求的情形；\n
•	用户因第三方如运营商的通讯线路故障、 技术问题、 网络 、电 脑故障、 系统不稳定及其他因不可抗力造成的损失的情形； 使用小米产品 、程序及服务可能存在的来自他人匿名或冒名的 含有威胁、 诽谤、 令人反感或非法内容的信息而招致的风险； 用户之间通过本网站或小米产品、 程序及服务与其他用户交 往， 因受误导或欺骗而导致或可能导致的任何心理、 生理上的 伤害以及经济上的损失；\n
•	使用小米产品、程序及服务可能存在的来自他人匿名或冒名的含有威胁、诽谤、令人反感或非法内容的信息而招致的风险；\n
•	用户直接通过本网站或小米产品、程序及服务与其他用户交往，因受误导或欺骗而导致的任何心理、生理上的伤害以及经济上的损失；\n
•	本网站和小米产品、 程序及服务明文声明， 不以明示、 默示或 以任何形式对小米及其合作公司服务之及时性、 安全性、 准确 性做出担保。 上述服务包括但不限于：\n
     a:" 智能识别陌生号码”服务：\n
     上述 "智能识别陌生号码 "服务在用户遇到陌生电话号码的来 电、 去电、 来短信、 去短信时将上述电话号码上传至小米公司 服务器， 从而进行号码 "标记信息" 的识别 （该服务严格保证用 户数据的隐私不被第三方获取，即， 保证用户的身份不会因信 息的上传而被第三人精准定位）；\n
     上述号码的 "标记信息" 均来源于网友或网络合作商。小米公司 仅采用技术手段确保 （i) "标记信息”与一定时间内较多网友上 传的 "标记信息 "一致 （即， 当一个陌生电话号码的标记信息 为 "500 人标记为诈骗电话”时， 表明一定时间内较多数量的网 友认定该号码为诈骗电话， 并将该标记信息提供给小米公 司）； （H) 筛选并提供由最可靠的服务商提供的" 标记信息”， 并向用户标明 "标记信息" 来源。 同时， 小米公司提供 "纠错 "功 能， 帮助用户反馈错误的标记信息。\n
2)	用户在本网站所发布的任何内容并不代表和反映小米的任何观 点或政策， 小米对此不承担任何责任。\n
3)	在任何情况下， 小米均不对任何间接性、 后果性、 惩罚性、 偶然 性、 特殊性或刑罚性的损害， 包括因用户使用小米服务而遭受的 利润损失， 承担责任。 尽管本协议中可能含有相悖的规定， 我们对 您承担的全部责任， 无论因何原因或何种行为方式， 始终不超过 您在注册期内因使用小米服务而支付给小米的费用 (如有)。\n</string>
    <string name="user_privacy_14">7.知识产权\n</string>
    <string name="user_privacy_15">1)	用户在小米网站或互动平台上发布的信息不得侵犯任何第三人 的知识产权，未经具有相关所有权所有者之事先书面同意，用户 不得以任何方式上传、发布、修改、传播或复制任何受著作权保护 的材料、商标或属于其他人的专有信息。如果收到任何著作权人 或其合法代表发给小米的适当通知后，我们将在审查的基础上移 除该等侵犯他人著作权的内容。\n
2)	小米服务中所涉及的MIUI等图形、文字或其组成，以及其他小 米标志及产品、服务名称，均为小米之商标。未经小米事先书面同 意，用户不得将小米标识以任何方式展示或使用或作其他处理，任何单位及个人不得以任何方式或理由对该商标的任何部分进行 使用、复制、修改、传播、抄录或与其它产品捆绑使用销售。\n
3)	除前述规定以外，如果您认为有人复制并在小米网站服务上发 布您的作品，并已构成对您著作权的侵犯，请及时与我们联系，联 系邮箱【xiaomi@xiaomi.com】，并提供包含如下信息的书面通 知：\n
•	(i)证明您作为涉嫌侵权内容所有者的权属证明；\n
•	(ii)明确的身份证明、住址、联系方式；\n
•	(iii)涉嫌侵权内容在小米服务上的位置；\n
•	(iv)您声称遭受侵犯的著作权作品的描述；\n
•	(v)您著作权遭受侵犯的相关证明；\n
•   (vi)在同意承担伪证处罚之后果的前提下，出具书面陈述以声明您在通知中所述内容是准确和真实的。录或与其它产品捆绑使用销售。\n</string>
    <string name="user_privacy_16">8.修改与终止\n</string>
    <string name="user_privacy_17">1)修改\n\n
•本协议容许变更。如果本协议有任何实质性变更，我们将通过您提供的电子邮件或本网站的公告来通知您。变更通知之后，继续使用本网站和小米产品、程序及服务则视为您已知晓此类变更并同意受条款其约束；\n
•小米保留在任何时候无需通知而修改、保留或关闭本网站、小米产品、程序或任何服务之权利；\n
•您已同意小米无需因修改、保留或关闭本网站、小米产品、程序或其他服务的行为对您或第三方承担责任。\n
2)终止\n
•本协议自您接受之日起生效，在您使用本网站和小米产品、程 序及服务的过程中持续有效，直至依据本协议终止；\n
•尽管有上述规定，如果您使用本网站和小米产品、程序及服务 的时间早于您接受本协议的时间，您在此知晓或应当知晓并同 意本协议于您第一次使用本网站和小米产品、程序及服务时生 效，除非依据本协议提前终止。\n
3)	我们可能会：依据法律的规定，保留您使用本网站、小米产品、 程序及服务、或者本网站账户的权利；无论是否通知，我们将在任 何时间以任何原因终止本协议，包括出于善意的相信您违反了我 们可接受使用政策或本协议的其他规定。\n
4)	不受前款规定所限，如果用户侵犯第三人的版权且小米接到版 权所有人或版权所有人的合法代理人的通知后，小米保留终止本 协议的权利。\n
5)	—旦本协议终止，您的网站账户和使用本网站和小米产品、程 序及服务的权利即告终止。您应当知晓您的网站账户终止意味着 您的用户内容将从我们的活动数据库中删除。小米不因终止本协 议对您承担任何责任，包括终止您的用户账户和删除您的用户内 容。\n
6)任何本网站的更新版本或小米产品、程序及服务的未来版本、更新或者其他变更将受到本协议约束。\n</string>
    <string name="user_privacy_18">9.其他\n</string>
    <string name="user_privacy_19">1)	反馈\n
•您对小米提出建议（或称"反馈"），即视为您向小米转让"反 馈"的全部权利并同意小米有权利以任何合理方式使用此反馈 及其相关信息。我们将视此类反馈信息为非保密且非专有；\n
•您已同意您不会向小米提供任何您视为保密和专有的信息；\n
•我们将保留基于我们的判断检查用户内容的权利（而非义 务）。无论通知与否，我们有权在任何时间以任何理由删除或 移动您的用户内容。依据第8条规定，我们有权保留或终止您 的账户。\n
2)	隐私政策\n
•请查阅我们的《隐私政策》，《隐私政策》为与本协议效力等同 且不可分割的一部分。\n
3)	通知\n
•您必须提供您最近经常使用的有效的电子邮件地址。您所提供 的电子邮件地址无法使用或者因任何原因我们无法将通知送 达给您而产生的风险，小米不承担责任。本网站发布的公告通 知及向您所发送的包含此类通知的电子邮件毫无疑问构成有 效通知。\n
4)	适用法律\n
•本协议适用中华人民共和国法律。\n
•如果双方发生纠纷，应本着友好的原则协商解决；如协商不 成，应向北京小米科技有限公司所在地的法院提起诉讼。\n
5)	独立性\n
•若本协议中的某些条款因故无法适用，则本协议的其他条款继 续适用且无法适用的条款将会被修改，以便其能够依法适用。\n
6)	完整性\n
•本协议（包括隐私政策）是您和小米之间关于本网站和小米产 品、程序及服务相关事项的最终的、完整的、排他的协议，且 取代和合并之前当事人关于此类事项（包括之前的最终用户许 可、服务条款）的讨论和协议。\n
•每部分的题目只为阅读之便而无任何法律或合同义务。\n
•除非小米书面同意，您不得转让本协议所规定的权利义务。任 何违反上述规定企图转让的行为均无效。\n
</string>
    <string name="user_privacy_20">10.联系方式\n</string>
    <string name="user_privacy_21">&#8201;•地址:北京市海淀区清河中街68号华润五彩城写字楼\n
•邮编:100085\n
•电话:010-60606666\n
•传真:010-60606666 (转）1101\n
•电子信箱：xiaomi@xiaomi.com\n</string>
    <string name="miui_person_style_title">个性化风格</string>
    <string name="miui_person_style_desc">为您专属定制几套主题</string>
    <string name="miui_person_style_normal">标准版</string>
    <string name="miui_person_style_no_border">无界</string>
</resources>