<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <include layout="@layout/layout_top" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/user_privacy_01"
                android:textColor="#767676"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_privacy_02"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/user_privacy_03"
                android:textColor="#767676"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_privacy_04"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/user_privacy_05"
                android:textColor="#767676"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_privacy_06"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/user_privacy_07"
                android:textColor="#767676"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_privacy_08"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/user_privacy_09"
                android:textColor="#767676"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_privacy_10"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_privacy_11"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.5"
                android:textColor="#767676"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_privacy_12"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_privacy_13"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.5"
                android:textColor="#767676"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_privacy_14"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_privacy_15"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.5"
                android:textColor="#767676"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_privacy_16"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_privacy_17"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.5"
                android:textColor="#767676"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_privacy_18"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_privacy_19"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.5"
                android:textColor="#767676"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_privacy_20"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_privacy_21"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.5"
                android:textColor="#767676"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>