<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativelayout"
    android:layout_width="330dp"
    android:layout_marginBottom="10dp"
    android:layout_height="wrap_content">


    <ScrollView
        android:id="@+id/wifi_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:scrollbars="none"
        android:background="@drawable/dialog_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <TextView
                    android:id="@+id/delete_wlan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/remove_wlan"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/delete_wlan_tips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:layout_below="@+id/delete_wlan"
                    android:text="@string/delete_wlan_tips"
                    android:textColor="#686868"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_below="@+id/layout">

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dedede"/>

                <LinearLayout
                    android:id="@+id/dialog_control"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@+id/line"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/wifi_button_cancle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/cancel_wifi"
                        android:textColor="@color/gray_light"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:background="#dedede" />

                    <TextView
                        android:id="@+id/wifi_button_sure"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sure"
                        android:textColor="@color/light_blue"
                        android:textSize="14sp" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>