<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:id="@+id/personal_style_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@id/mi_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="98dp"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/miui_person_style_title"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            />

        <TextView
            android:id="@id/mi_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#B7B7B7"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:text="@string/miui_person_style_desc"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_below="@id/personal_style_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/miui_v9_normal"/>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkbox_miui_v9_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:button="@drawable/check_button_v9"
                    android:text="@string/miui_person_style_normal"
                    android:textColor="#B7B7B7"
                    android:textSize="13sp"
                    android:paddingLeft="5dp"
                    />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="8dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/miui_v9_no_border"/>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkbox_miui_v9_no_border"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/check_button_v9"
                    android:text="@string/miui_person_style_no_border"
                    android:textColor="#B7B7B7"
                    android:textSize="13sp"
                    android:paddingLeft="5dp"
                    />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/layout_bottom"/>

</RelativeLayout>