<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativelayout"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/ip_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="18dp"
        android:text="@string/ip_set"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/ip_set"
        android:background="#dedede"/>

    <RelativeLayout
        android:id="@+id/layout_dhcp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/line1">

        <ImageView
            android:id="@+id/sel_image"
            android:background="@drawable/item_arrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:scaleType="center"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/choose_dhcp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="32dp"
            android:paddingTop="10dp"
            android:textColor="@color/black"
            android:text="@string/dhcp_tips"
            android:textSize="15sp" />

    </RelativeLayout>
    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:layout_below="@+id/layout_dhcp"
        android:background="#dedede"/>

    <RelativeLayout
        android:id="@+id/layout_static"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2">

        <ImageView
            android:id="@+id/sel_image2"
            android:background="@drawable/item_arrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:scaleType="center"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/choose_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="32dp"
            android:paddingBottom="12dp"
            android:textColor="@color/black"
            android:text="@string/static_tips"
            android:textSize="15sp" />

    </RelativeLayout>
</RelativeLayout>